--- a/src/projets/projetbookshelf/projetbookshelf.html
+++ b/src/projets/projetbookshelf/projetbookshelf.html
@@ -1,6 +1,6 @@
 ---
 title: Conception d'un site de réservation de livres
-layout: projetlayout.html
+layout: projet_layout.html
 ---
 <h2>Conception d'un site de réservation de livres</h2>
 <div class="project-img-wrapper">
