--- a/src/projets/projetmairies/projetmairies.html
+++ b/src/projets/projetmairies/projetmairies.html
@@ -1,6 +1,6 @@
 ---
 title: Développement d'un site de Mairie facile à administrer et plaisant à utiliser
-layout: projetlayout.html
+layout: projet_layout.html
 ---
 <h2>Développement d'un site de Mairie facile à administrer et plaisant à utiliser</h2>
 <div class="project-img-wrapper">
