--- a/src/projets/projetnewsletter/projetnewsletter.html
+++ b/src/projets/projetnewsletter/projetnewsletter.html
@@ -1,6 +1,6 @@
 ---
 title: Développement d'un site d'inscription et d'envoi de newsletter. Intégration d'email HTML responsive
-layout: projetlayout.html
+layout: projet_layout.html
 ---
 <h2>Développement d'un site de newsletter & intégration d'email HTML responsive.</h2>
 <div class="project-img-wrapper">
