--- a/src/projets/projets.html
+++ b/src/projets/projets.html
@@ -11,23 +11,8 @@ title: Mes projets numériques
     {% include "color-picker.html"%}
     <div class="container projets-container" id="normal-page-container">
       <header>
-        {% include "menumobile.html"%}
-        <nav
-          class="navigation-flexer"
-          id="primary-navigation"
-          data-visible="false"
-        >
-          <span class="navigation-announcer">NAVIGATION</span>
-          <ul class="menu">
-            <li>
-              <a href="../index">HOME</a>
-            </li>
-            <li><a href="/curriculum">CV</a></li>
-            <li><a href="/blog">BLOG</a></li>
-            <li><a href="/projets">PROJETS</a></li>
-            <li><a href="../colophon">COLOPHON</a></li>
-          </ul>
-        </nav>
+        {% include "mobilenav.html"%}
+        {% include "navigation.html"%}
       </header>
       <main id="projets">
         <h1>Mes projets</h1>
