--- a/src/tags.html
+++ b/src/tags.html
@@ -4,7 +4,7 @@ pagination:
   size: 1
   alias: tag
   addAllPagesToCollections: true
-layout: basefortagpage.html
+layout: tagslist_layout.html
 permalink: /tags/{{tag | slugify }}/index.html
 eleventyComputed:
   title: Posts tag
