--- a/src/colophon.html
+++ b/src/colophon.html
@@ -9,7 +9,7 @@ title: Indications sur la façon dont j'ai conçue mon site web
   </head>
   <body>
     {% include "color-picker.html"%}
-    <div class="container" id="normal-page-container">
+    <div id="normal-page-container">
       <header>
         {% include "mobilenav.html"%}
         {% include "navigation.html"%}
