--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@ title: Développement web et management de projets numériques à Nantes
   </head>
   <body>
     {% include "color-picker.html"%}
-    <div class="container" id="homepage-container">
+    <div id="homepage-container">
       <header id="homepage-menu">
         {% include "mobilenav.html"%}
         <nav
