--- a/src/projets/projetslist.html
+++ b/src/projets/projetslist.html
@@ -9,7 +9,7 @@ title: Mes projets numériques
   </head>
   <body>
     {% include "color-picker.html"%}
-    <div class="container projets-container" id="normal-page-container">
+    <div class="projets-container" id="normal-page-container">
       <header>
         {% include "mobilenav.html"%}
         {% include "navigation.html"%}
