blog(popover) & eleventy(data) & removed(unnecessary layouts)

--- a/src/colophon.html
+++ b/src/colophon.html
@@ -47,7 +47,7 @@ title: Indications sur la façon dont j'ai conçue mon site web
           de mon contenu, loin de certaines plateformes sociales vacillantes. Le flux RSS
           étant, à mon sens, l'approche la plus raisonnée pour suivre du contenu
           web, voici celui de ce site
-          <a class="rss" href="/feed/feed.xml"><i class="ph ph-rss"></i></a>
+          <a class="rss" href="/feed/feed.xml"><span class="ph ph-rss"></span></a>
         </p>
       </main>
       <footer id="footer">{% include "footer.html"%}</footer>
