--- a/src/index.html
+++ b/src/index.html
@@ -45,15 +45,15 @@ title: Développement web et management de projets numériques à Nantes
           <article class="services">
             <ul>
               <li>
-                <i class="ph ph-arrow-circle-right"></i>
+                <span class="ph ph-arrow-circle-right"></span>
                 <span>Conception de sites webs</span>
               </li>
               <li>
-                <i class="ph ph-arrow-circle-right"></i>
+                <span class="ph ph-arrow-circle-right"></span>
                 <span>Maintenance & refonte</span>
               </li>
               <li>
-                <i class="ph ph-arrow-circle-right"></i>
+                <span class="ph ph-arrow-circle-right"></span>
                 <span>Développement spécifique</span>
               </li>
             </ul>
