--- a/src/curriculum.html
+++ b/src/curriculum.html
@@ -21,13 +21,13 @@ title: CV de Téotime Pacreau
             href="/assets/CV_data.pdf"
             download
           >
-            <icon class="ph ph-download"></icon>
+            <span aria-hidden="true" class="ph ph-download"></span>
           </a>
         </button>
 
         <h2 aria-hidden="true" id="experiences-pro-titre">Expériences professionnelles</h2>
         <section aria-labelledby="experiences-pro-titre" id="experiences">
-          <time aria-label="Année de l'expérience" class="travail-time"
+          <time class="travail-time"
             >2022-2024</time
           >
           <div aria-hidden="true" class="hr-parent"><hr /></div>
@@ -79,7 +79,7 @@ title: CV de Téotime Pacreau
             </ul>
           </details>
 
-          <time aria-label="Année de l'expérience" class="travail-time"
+          <time class="travail-time"
             >2021-2022</time
           >
           <div aria-hidden="true" class="hr-parent"><hr /></div>
@@ -112,7 +112,7 @@ title: CV de Téotime Pacreau
             </ul>
           </details>
 
-          <time aria-label="Année de l'expérience" class="travail-time"
+          <time class="travail-time"
             >2020-2021</time
           >
           <div aria-hidden="true" class="hr-parent"><hr /></div>
