--- a/src/index.html
+++ b/src/index.html
@@ -29,9 +29,9 @@ title: Développement web et management de projets numériques à Nantes
       <main id="homepage-hero">
         <div id="homepage-profil" class="intersect">
           <img
+            aria-hidden="true"
             loading="eager"
             src="/img/profil_mobile_59.webp"
-            alt="Mon visage"
             height="59"
             width="59"
             srcset="/img/profil_mobile_59.webp 59w, /img/profil_112.webp 112w"
@@ -45,15 +45,15 @@ title: Développement web et management de projets numériques à Nantes
           <article class="services">
             <ul>
               <li>
-                <span class="ph ph-arrow-circle-right"></span>
-                <span>Conception de sites webs</span>
+                <span aria-hidden="true" class="ph ph-arrow-circle-right"></span>
+                <span>Conception de sites web</span>
               </li>
               <li>
-                <span class="ph ph-arrow-circle-right"></span>
+                <span aria-hidden="true" class="ph ph-arrow-circle-right"></span>
                 <span>Maintenance & refonte</span>
               </li>
               <li>
-                <span class="ph ph-arrow-circle-right"></span>
+                <span aria-hidden="true" class="ph ph-arrow-circle-right"></span>
                 <span>Développement spécifique</span>
               </li>
             </ul>
