--- a/src/curriculum.html
+++ b/src/curriculum.html
@@ -18,7 +18,7 @@ title: CV de Téotime Pacreau
         <button tabindex="-1" aria-label="Télecharger mon CV" id="download-cv">
           <a
             aria-label="Télecharger mon CV"
-            href="/assets/CV_data.pdf"
+            href="/assets/CV_teotime_pacreau.pdf"
             download
           >
             <span aria-hidden="true" class="ph ph-download"></span>
