fix(styles on projet homepage)

--- a/src/index.html
+++ b/src/index.html
@@ -45,15 +45,24 @@ title: Développement web et management de projets numériques à Nantes
           <article class="services">
             <ul>
               <li>
-                <span aria-hidden="true" class="ph ph-arrow-circle-right"></span>
+                <span
+                  aria-hidden="true"
+                  class="ph ph-arrow-circle-right"
+                ></span>
                 <span>Conception de sites web</span>
               </li>
               <li>
-                <span aria-hidden="true" class="ph ph-arrow-circle-right"></span>
+                <span
+                  aria-hidden="true"
+                  class="ph ph-arrow-circle-right"
+                ></span>
                 <span>Maintenance & refonte</span>
               </li>
               <li>
-                <span aria-hidden="true" class="ph ph-arrow-circle-right"></span>
+                <span
+                  aria-hidden="true"
+                  class="ph ph-arrow-circle-right"
+                ></span>
                 <span>Développement spécifique</span>
               </li>
             </ul>
@@ -79,14 +88,6 @@ title: Développement web et management de projets numériques à Nantes
                 "
                 sizes="(max-width: 600px) 169px, 1142px"
               />
-              <button
-                class="homepage-projets-btn projets-btn-mobile"
-                tabindex="-1"
-              >
-                <a class="homepage-projets-link" href="/projets/projetmairies/">
-                  Découvrir ↗
-                </a>
-              </button>
             </div>
             <div class="homepage-projets-grid-item__right">
               <ul>
@@ -97,14 +98,10 @@ title: Développement web et management de projets numériques à Nantes
               <div class="homepage-projets-grid-item__right__titleanddesc">
                 <span>Site web de Mairie administrable par CMS</span>
               </div>
-              <button
-                class="homepage-projets-btn projets-btn-desktop"
-                tabindex="-1"
-              >
-                <a class="homepage-projets-link" href="/projets/projetmairies/">
-                  Découvrir ↗
-                </a>
-              </button>
+
+              <a aria-label="Consulter plus en détail le projet de site de mairie" class="homepage-projets-anchor" href="/projets/projetmairies/">
+                Découvrir
+              </a>
             </div>
           </article>
 
@@ -122,17 +119,6 @@ title: Développement web et management de projets numériques à Nantes
                 "
                 sizes="(max-width: 600px) 168px, 1142px"
               />
-              <button
-                class="homepage-projets-btn projets-btn-mobile"
-                tabindex="-1"
-              >
-                <a
-                  class="homepage-projets-link"
-                  href="/projets/projetbookshelf/"
-                >
-                  Découvrir ↗
-                </a>
-              </button>
             </div>
             <div class="homepage-projets-grid-item__right">
               <ul>
@@ -143,17 +129,12 @@ title: Développement web et management de projets numériques à Nantes
               <div class="homepage-projets-grid-item__right__titleanddesc">
                 <span>Site web fullstack de réservation de livres</span>
               </div>
-              <button
-                class="homepage-projets-btn projets-btn-desktop"
-                tabindex="-1"
+              <a aria-label="Consulter plus en détail le projet de site de bibliothèque"
+                class="homepage-projets-anchor"
+                href="/projets/projetbookshelf/"
               >
-                <a
-                  class="homepage-projets-link"
-                  href="/projets/projetbookshelf/"
-                >
-                  Découvrir ↗
-                </a>
-              </button>
+                Découvrir
+              </a>
             </div>
           </article>
 
@@ -171,18 +152,6 @@ title: Développement web et management de projets numériques à Nantes
                 "
                 sizes="(max-width: 600px) 168px, 1142px"
               />
-
-              <button
-                class="homepage-projets-btn projets-btn-mobile"
-                tabindex="-1"
-              >
-                <a
-                  class="homepage-projets-link"
-                  href="/projets/projetnewsletter/"
-                >
-                  Découvrir ↗
-                </a>
-              </button>
             </div>
             <div class="homepage-projets-grid-item__right">
               <ul>
@@ -193,18 +162,13 @@ title: Développement web et management de projets numériques à Nantes
               <div class="homepage-projets-grid-item__right__titleanddesc">
                 <span>Site web de newsletter & intégration HTML d'email</span>
               </div>
-
-              <button
-                class="homepage-projets-btn projets-btn-desktop"
-                tabindex="-1"
+              <a
+              aria-label="Consulter plus en détail le projet de site de newsletter"
+                class="homepage-projets-anchor"
+                href="/projets/projetnewsletter/"
               >
-                <a
-                  class="homepage-projets-link"
-                  href="/projets/projetnewsletter/"
-                >
-                  Découvrir ↗
-                </a>
-              </button>
+                Découvrir
+              </a>
             </div>
           </article>
         </section>
