--- a/src/index.html
+++ b/src/index.html
@@ -182,7 +182,7 @@ title: Développement web et management de projets numériques à Nantes
               <header class="homepage-services-item-header">
                 <h3>Conception de sites web sur-mesure</h3>
                 <div class="services-icon">
-                  <svg
+                  <svg aria-hidden="true"
                     xmlns="http://www.w3.org/2000/svg"
                     width="32"
                     height="32"
@@ -221,7 +221,7 @@ title: Développement web et management de projets numériques à Nantes
               <header class="homepage-services-item-header">
                 <h3>Refonte & maintenance</h3>
                 <div class="services-icon">
-                  <svg
+                  <svg aria-hidden="true"
                     xmlns="http://www.w3.org/2000/svg"
                     width="32"
                     height="32"
@@ -244,7 +244,7 @@ title: Développement web et management de projets numériques à Nantes
               <header class="homepage-services-item-header">
                 <h3>Développement spécifique</h3>
                 <div class="services-icon">
-                  <svg
+                  <svg aria-hidden="true"
                     xmlns="http://www.w3.org/2000/svg"
                     width="32"
                     height="32"
