style (homepage-projets on mobile via container queries) && accessibility(CV & projets)

--- a/src/curriculum.html
+++ b/src/curriculum.html
@@ -23,6 +23,7 @@ title: CV de Téotime Pacreau
         >
           <span aria-hidden="true" class="ph ph-download"></span>
         </a>
+        <h1 class="visually-hidden">Mon curriculum vitae</h1>
         <h2 aria-hidden="true" id="experiences-pro-titre">
           Expériences professionnelles
         </h2>
