--- a/src/projets/projetmairies/projetmairies.html
+++ b/src/projets/projetmairies/projetmairies.html
@@ -4,7 +4,9 @@ layout: projet_layout.html
 ---
 <h2>Développement d'un site de Mairie facile à administrer et plaisant à utiliser</h2>
 <div class="project-img-wrapper">
-    <a target="_blank" href="https://mairies.teotimepacreau.fr/"><img src="../../img/mairies-projet.png" loading="eager" width="600" height="300" alt="Vue de la page d'accueil du site de mairie"></a>
+    <a target="_blank" aria-describedby="lien-projet" href="https://mairies.teotimepacreau.fr/">
+        <span id="lien-projet" class="visually-hidden">Page du projet</span>
+        <img src="../../img/mairies-projet.png" loading="eager" width="600" height="300" alt="Vue de la page d'accueil du site de mairie"></a>
 </div>
 <h3>Rôle</h3>
 <p>Développeur du projet, intégration d'un design pré-existant élaboré par <a href="https://timothee.goguely.com/">Timothée Goguely</a></p>
