--- a/src/projets/projetnewsletter/projetnewsletter.html
+++ b/src/projets/projetnewsletter/projetnewsletter.html
@@ -4,7 +4,9 @@ layout: projet_layout.html
 ---
 <h2>Développement d'un site de newsletter & intégration d'email HTML responsive.</h2>
 <div class="project-img-wrapper">
-    <a target="_blank" href="https://feuillu-newsletter.teotimepacreau.fr/"><img src="../../img/newsletter.png" loading="eager" width="600" height="300" alt="Homepage of the newsletter subscription website : a bento UI with a subscription form aside"></a>
+    <a target="_blank" aria-describedby="lien-projet" href="https://feuillu-newsletter.teotimepacreau.fr/">
+        <span id="lien-projet" class="visually-hidden">Page du projet</span>
+        <img src="../../img/newsletter.png" loading="eager" width="600" height="300" alt="Homepage of the newsletter subscription website : a bento UI with a subscription form aside"></a>
 </div>
 <h3>Rôle</h3>
 <p>Développeur et designer du projet</p>
