--- a/src/projets/projetbookshelf/projetbookshelf.html
+++ b/src/projets/projetbookshelf/projetbookshelf.html
@@ -4,7 +4,9 @@ layout: projet_layout.html
 ---
 <h2>Conception d'un site de réservation de livres</h2>
 <div class="project-img-wrapper">
-    <a target="_blank" href="https://bookshelf.teotimepacreau.fr/"><img src="../../img/bookshelf.png" loading="eager" width="600" height="300" alt="Homepage of the bookshelf organizer website : a friendly UI filled with a list of books"></a>
+    <a target="_blank" aria-describedby="lien-projet" href="https://bookshelf.teotimepacreau.fr/">
+        <span id="lien-projet" class="visually-hidden">Page du projet</span>
+        <img src="../../img/bookshelf.png" loading="eager" width="600" height="300" alt="Homepage of the bookshelf organizer website : a friendly UI filled with a list of books"></a>
 </div>
 <h3>Rôle</h3>
 <p>Développeur et designer du projet</p>
